Some changes to ru language

--- a/client/web/template/402.html
+++ b/client/web/template/402.html
@@ -3,13 +3,13 @@
 {% block css %}
 {% endblock %}
 
-{% block title %}500 InternalError | Filmer{% endblock %}
+{% block title %}402 LimitError | Filmer{% endblock %}
 
 {% block content %}
 	<div class="content">
 		<div class="page-error-container">
-			<h3 class="accent">Limit error</h3>
-			<p>Oops.. The daily usage limit for this part of the service has expired</p>
+			<h3 class="accent">Лимит исчерпан</h3>
+			<p>Упсс.. Дневной лимит на использование этой части сервиса исчерпан</p>
 		</div>
 	</div>
 {% endblock %}
