Fixed #search-keyword input width TODO

--- a/client/web/static/css/search.css
+++ b/client/web/static/css/search.css
@@ -50,6 +50,10 @@ h3 {
 	width: 36px;
 }
 
+#search-keyword {
+	width: 100px;
+}
+
 /* submit button in form */
 button[type="submit"] {
 	margin-top: 0;
