--- a/client/web/static/css/base.css
+++ b/client/web/static/css/base.css
@@ -43,9 +43,10 @@ nav {
 	font-size: 25px;
 	margin: 10px 15px;
 }
+
 .nav-elem a {
 	display: block;
-	width:  100%;
+	width: 100%;
 	height: 100%;
 
 	color: var(--white);
@@ -61,7 +62,9 @@ nav {
 .logo {
 	flex-grow: 1;
 }
-.logo a img, .profile a img {
+
+.logo a img,
+.profile a img {
 	width: 64px;
 }
 
@@ -69,6 +72,7 @@ nav {
 .nav-menu-button-elem {
 	margin: 10px 0;
 }
+
 .nav-menu-button-elem a {
 	border-radius: 20px;
 
@@ -83,6 +87,7 @@ nav {
 	height: 36px;
 	width: 36px;
 }
+
 .nav-menu-button-elem a:hover svg {
 	fill: var(--light-red);
 }
@@ -109,31 +114,39 @@ nav {
 .content {
 	text-align: center;
 }
-.content > * {
+
+.content>* {
 	margin-left: auto;
 	margin-right: auto;
 }
 
 /* every movie poster */
-.movie-poster, .movie-poster-big, .person-poster {
+.movie-poster,
+.movie-poster-big,
+.person-poster {
 	flex-shrink: 0;
 	display: flex;
 	justify-content: center;
 	align-content: center;
 }
-.movie-poster, .person-poster {
+
+.movie-poster,
+.person-poster {
 	align-self: center;
 }
+
 /* every movie poster size in movie lists */
 .movie-poster img {
 	height: 300px;
 	width: 200px;
 }
+
 /* every movie poster size in movie info */
 .movie-poster-big img {
 	height: 600px;
 	width: 400px;
 }
+
 /* every director/actor poster */
 .person-poster img {
 	height: 180px;
@@ -147,6 +160,7 @@ nav {
 .page-error-container {
 	width: 50%;
 }
+
 .page-error-container h3 {
 	font-size: 23px;
 	margin-bottom: 5px;
@@ -166,9 +180,11 @@ nav {
 		padding: 0 5px;
 	}
 
-	.logo a img, .profile a img {
+	.logo a img,
+	.profile a img {
 		width: 48px;
 	}
+
 	.nav-menu-button-elem a svg {
 		height: 27px;
 		width: 27px;
@@ -178,10 +194,12 @@ nav {
 		height: 165px;
 		width: 110px;
 	}
+
 	.movie-poster-big img {
 		height: 330px;
 		width: 220px;
 	}
+
 	.person-poster img {
 		height: 135px;
 		width: 90px;
