--- a/client/web/static/css/list_movies.css
+++ b/client/web/static/css/list_movies.css
@@ -15,6 +15,7 @@
 	grid-template-columns: repeat(2, 1fr);
 
 }
+
 /* styles for search page */
 .list-movies-search {
 	grid-template-columns: repeat(3, 1fr);
@@ -32,7 +33,8 @@
 	box-shadow: 0px 0px 25px 1px var(--light-black);
 	border-radius: 20px;
 }
-.movie > * {
+
+.movie>* {
 	margin-left: 0;
 }
 
@@ -55,6 +57,7 @@
 
 	margin: 3px 0;
 }
+
 .movie-info-item label {
 	color: var(--light-red);
 	margin-right: 5px;
@@ -63,11 +66,13 @@
 .movie-genre-list {
 	margin: 0;
 }
+
 .movie-genre-list ul {
 	display: flex;
 	justify-content: flex-start;
 	flex-wrap: wrap;
 }
+
 .movie-genre-list ul li {
 	margin-left: 4px;
 	margin-right: 4px;
@@ -108,7 +113,8 @@
 		min-width: 330px;
 	}
 
-	.movie-info-item > *, #pagination * {
+	.movie-info-item>*,
+	#pagination * {
 		font-size: 16px;
 	}
 }
