--- a/client/web/template/stared_want_watched.html
+++ b/client/web/template/stared_want_watched.html
@@ -58,6 +58,12 @@
 
 				<div class="filters-separator"></div>
 				<div class="filter-setting">
+					<p class="accent">title</p>
+					<input class="filter-title" id="filter-title" type="text" name="title">
+				</div>
+
+				<div class="filters-separator"></div>
+				<div class="filter-setting">
 					<p class="accent">genres</p>
 
 					<div id="filter-genre-list">
