Added new back button system

--- a/client/web/template/person.html
+++ b/client/web/template/person.html
@@ -10,7 +10,7 @@
 <div class="person-title">
 	<div class="back-button-container">
 		<div class="back-button-subcontainer">
-			<a id="back-button" href="/filmer">
+			<a id="back-button" href="/filmer" onclick="onBackButtonClick()">
 				<svg version="1.1" viewBox="0 0 32 32" xml:space="preserve" xmlns="http://www.w3.org/2000/svg"
 					xmlns:xlink="http://www.w3.org/1999/xlink">
 					<path
