Fixed user movies category page layout

--- a/client/web/static/css/stared_want_watched.css
+++ b/client/web/static/css/stared_want_watched.css
@@ -33,7 +33,7 @@
 	flex-direction: column;
 	/* 	margin: 5px auto; */
 	padding: 20px;
-	gap: 5px;
+	gap: 3px;
 
 	background-color: var(--dark-gray);
 	box-shadow: 0px 0px 25px 1px var(--light-black);
@@ -57,6 +57,12 @@
 
 #order-settings>.setting-header {
 	margin-bottom: 15px;
+}
+
+#order-settings>div {
+	display: flex;
+	flex-direction: column;
+	gap: 5px;
 }
 
 .sort-field-link {
