--- a/client/web/template/stared_want_watched.html
+++ b/client/web/template/stared_want_watched.html
@@ -38,15 +38,16 @@
 		<div id="flex-settings">
 			<div id="order-settings" class="settings">
 				<p class="setting-header">Order</p>
+				<div>
+					<a class="sort-field-link" data-link-value="title" href="?sortField=title">title</a>
+					<a class="sort-field-link" data-link-value="rating" href="?sortField=rating">rating</a>
+					<a class="sort-field-link" data-link-value="year" href="?sortField=year">year</a>
+					<a class="sort-field-link" data-link-value="updated_at" href="?sortField=updated_at">updated at</a>
 
-				<a class="sort-field-link" data-link-value="title" href="?sortField=title">title</a>
-				<a class="sort-field-link" data-link-value="rating" href="?sortField=rating">rating</a>
-				<a class="sort-field-link" data-link-value="year" href="?sortField=year">year</a>
-				<a class="sort-field-link" data-link-value="updated_at" href="?sortField=updated_at">updated at</a>
-
-				<div class="links-switch">
-					<a class="sort-order-link asc-order" data-link-value="asc" href="?sortOrder=asc">ASC</a>
-					<a class="sort-order-link desc-order" data-link-value="desc" href="?sortOrder=desc">DESC</a>
+					<div class="links-switch">
+						<a class="sort-order-link asc-order" data-link-value="asc" href="?sortOrder=asc">ASC</a>
+						<a class="sort-order-link desc-order" data-link-value="desc" href="?sortOrder=desc">DESC</a>
+					</div>
 				</div>
 			</div>
 
