--- a/admin/web/template/user_activity.html
+++ b/admin/web/template/user_activity.html
@@ -4,12 +4,9 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- <link rel="stylesheet" type="text/css" href="/static/css/reset.css"> -->
-    <!-- <link rel="stylesheet" type="text/css" href="/static/css/base.css"> -->
-    <!-- <link rel="stylesheet" type="text/css" href="/static/css/user_activity.css"> -->
-    <link rel="stylesheet" type="text/css" href="../static/css/reset.css">
-    <link rel="stylesheet" type="text/css" href="../static/css/base.css">
-    <link rel="stylesheet" type="text/css" href="../static/css/user_activity.css">
+    <link rel="stylesheet" type="text/css" href="/static/css/reset.css">
+    <link rel="stylesheet" type="text/css" href="/static/css/base.css">
+    <link rel="stylesheet" type="text/css" href="/static/css/user_activity.css">
     <title>Users activity | Filmer-admin</title>
 </head>
 
@@ -21,20 +18,15 @@
 
     <div class="content flex-content">
         <div class="resize-content all-user-blocks">
+            {{range .usersActivity}}
             <div class="user-block">
-                <p class="user-email"><span class="accent">User:</span> user@gmail.com</p>
-                <p class="user-created-at">(created 14 May 2025 10:48:14)</p>
-                <p class="user-stared"><span class="accent">Stared:</span> 11</p>
-                <p class="user-want"><span class="accent">Want:</span> 1</p>
-                <p class="user-watched"><span class="accent">Watched:</span> 3</p>
+                <p class="user-email"><span class="accent">User:</span> {{.Email}}</p>
+                <p class="user-created-at">({{.PrettyCreatedAt}})</p>
+                <p class="user-stared"><span class="accent">Stared:</span> {{.Stared}}</p>
+                <p class="user-want"><span class="accent">Want:</span> {{.Want}}</p>
+                <p class="user-watched"><span class="accent">Watched:</span> {{.Watched}}</p>
             </div>
-            <div class="user-block">
-                <p class="user-email"><span class="accent">User:</span> very-long-email-username@gmail.com</p>
-                <p class="user-created-at">(created 14 May 2025 10:48:14)</p>
-                <p class="user-stared"><span class="accent">Stared:</span> 110</p>
-                <p class="user-want"><span class="accent">Want:</span> 900</p>
-                <p class="user-watched"><span class="accent">Watched:</span> 3648</p>
-            </div>
+            {{end}}
         </div>
     </div>
 </body>
